# GameRoomTask

./: .gitignore  CMakeLists.txt  README.md  build-executable.sh  build-tests.sh  format.sh  input.txt  run.sh
include/: RevenuerManager.hpp  log.hpp  return_codes.h
include/base_parser/: BaseParser.hpp  CharSource.hpp
include/types/: InputEvent.hpp  RevenuerManagerData.hpp
src/: RevenuerManager.cpp  log.cpp  main.cpp
src/base_parser/: BaseParser.cpp  CharSource.cpp
src/types/: InputEvent.cpp  RevenuerManagerData.cpp
test/: test.cpp
